# neyvan-test3

./: .directory  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml  release.yml  snap.yml
data/: .directory  NeyvanTest.desktop
snap/: snapcraft.yaml
src/: cmake.h.in  mainwindow.ui  updaterdialog.cpp
